--- a/_posts/2020-12-09-Github入门.md
+++ b/_posts/2020-12-09-Github入门.md
@@ -28,12 +28,12 @@ LF样例    \n
 CRLF: carriage return line feed 包含回车的换行机制 （windows）  
 CRLF样例   \r\n  
 
-![1](https://github.com/i493052739/i493052739.github.io/tree/master/assets/img/postimage/1.png "")  
-![2](https://github.com/i493052739/i493052739.github.io/tree/master/assets/img/postimage/2.png "")  
-![3](https://github.com/i493052739/i493052739.github.io/tree/master/assets/img/postimage/3.png "")  
-![4](https://github.com/i493052739/i493052739.github.io/tree/master/assets/img/postimage/4.png "")  
-![5](https://github.com/i493052739/i493052739.github.io/tree/master/assets/img/postimage/5.png "")  
-![6](https://github.com/i493052739/i493052739.github.io/tree/master/assets/img/postimage/6.png "")  
-![7](https://github.com/i493052739/i493052739.github.io/tree/master/assets/img/postimage/7.png "")  
-![8](https://github.com/i493052739/i493052739.github.io/tree/master/assets/img/postimage/8.png "")  
-![9](https://github.com/i493052739/i493052739.github.io/tree/master/assets/img/postimage/9.png "")  
+![1](../assets/img/postimage/1.png)  
+![2](../assets/img/postimage/2.png)  
+![3](../assets/img/postimage/3.png)  
+![4](../assets/img/postimage/4.png)  
+![5](../assets/img/postimage/5.png)  
+![6](../assets/img/postimage/6.png)  
+![7](../assets/img/postimage/7.png)  
+![8](../assets/img/postimage/8.png)  
+![9](../assets/img/postimage/9.png)  
