--- a/_posts/2020-12-09-Github入门.md
+++ b/_posts/2020-12-09-Github入门.md
@@ -28,12 +28,20 @@ LF样例    \n
 CRLF: carriage return line feed 包含回车的换行机制 （windows）  
 CRLF样例   \r\n  
 
-![1](../assets/img/postimage/1.png)  
-![2](../assets/img/postimage/2.png)  
-![3](../assets/img/postimage/3.png)  
-![4](../assets/img/postimage/4.png)  
-![5](../assets/img/postimage/5.png)  
-![6](../assets/img/postimage/6.png)  
-![7](../assets/img/postimage/7.png)  
-![8](../assets/img/postimage/8.png)  
-![9](../assets/img/postimage/9.png)  
+![image1](/assets/img/postimage/1.png "image1")  
+
+![image2](/assets/img/postimage/2.png "image2")  
+
+![image3](/assets/img/postimage/3.png "image3")  
+
+![image4](/assets/img/postimage/4.png "image4")  
+
+![image5](/assets/img/postimage/5.png "image5")  
+
+![image6](/assets/img/postimage/6.png "image6")  
+
+![image7](/assets/img/postimage/7.png "image7")  
+
+![image8](/assets/img/postimage/8.png "image8")  
+
+![image9](/assets/img/postimage/9.png "image9")  
