--- a/_posts/2020-12-09-Github入门1.md
+++ b/_posts/2020-12-09-Github入门1.md
@@ -7,7 +7,7 @@ tags: [github]
 pin: false
 ---
 
-## Linus Torvalds 托瓦兹哲学
+## 🗃 Linus Torvalds 托瓦兹哲学
 
 * *I am smarter, I can teach you more, I am your god*. 
 * *You not only have to be a good coder, you have to be a sneaky bastard too*.
@@ -20,7 +20,7 @@ pin: false
   * 中文电子版：[Link](https://gitee.com/progit/1-%E8%B5%B7%E6%AD%A5.html#1.1-%E5%85%B3%E4%BA%8E%E7%89%88%E6%9C%AC%E6%8E%A7%E5%88%B6)
 ---
 
-## 学习Git相关内容时需要了解的缩写 Abbr.
+## 🔖 学习Git相关内容时需要了解的缩写 Abbr.
 * **VCS**:  Version Control System 
 
 * **SVN**: Subversion (属于集中式VCS)
@@ -41,7 +41,7 @@ and the name as (depending on your way):
 (Reference: [Link](https://en.wikipedia.org/wiki/Git))
 
 ---
-## Git的面世缘由
+## ⚗ Git的面世缘由
 
 >1998年9月 - 2002年，Linus那Linux开源的内核项目管理起来一直很麻烦，因为项目实在是太大了，开发者花费过多的时间在版本管理上。
 
@@ -55,7 +55,7 @@ and the name as (depending on your way):
 
 ---
 
-## Git立项目标
+## 🧐 Git立项目标
 
 1. 分支切换速度要尽可能快
 
@@ -75,7 +75,7 @@ and the name as (depending on your way):
 
 ---
 
-## SVN vs. Git
+## 💫 SVN vs. Git
 
 | 差异         | SVN                                                          | Git                                                          |
 | ------------ | ------------------------------------------------------------ | ------------------------------------------------------------ |
@@ -95,7 +95,7 @@ and the name as (depending on your way):
 
 ---
 
-## Git相关下载与安装的补充
+## 🏷️ Git相关下载与安装的补充
 
 * 基础 Git-SCM (Git Client / Git Bash) 下载地址: 
 
@@ -110,7 +110,7 @@ and the name as (depending on your way):
 
 ---
 
-## Git 安装后，一生一次的初始化操作
+## 🔨 Git 安装后，一生一次的初始化操作
 
 打开 git bash
 
