--- a/_posts/2020-12-11-Github入门2.md
+++ b/_posts/2020-12-11-Github入门2.md
@@ -41,3 +41,10 @@ CRLF样例   \r\n
  ![image8](/assets/img/postimage/8.jpg "image8")  
  ![image9](/assets/img/postimage/9.jpg "image9")  
  
+ 
+### emoji test: 
+
+🎨⚡️🔥🐛🚑✨📝🚀🎉💄✅🔒🔖🔧🚨🚧💚⬇️⬆️📌
+📌👷📈♻️➕➖🔨🌐✏️💩⏪🔀📦👽🚚📄💥
+🍱♿️💡🍻💬🗃🔊🔇👥🚸🏗📱🤡🥚🙈📸⚗🔍🏷️🌱
+🚩🥅💫🗑🛂🩹🧐
