spoiler block test

--- a/_posts/2020-12-11-Github入门2.md
+++ b/_posts/2020-12-11-Github入门2.md
@@ -7,29 +7,114 @@ tags: [github]
 pin: false
 ---
 
+## spoiler block test
+<details>
+  <summary>Spoiler warning</summary>
 
-## GIT 三大对象：
+  Spoiler text. Note that it's important to have a space after the summary tag. You should be able to write any markdown you want inside the `<details>` tag... just make sure you close `<details>` afterward.
 
-### blob 对象：      
-代表 ： 单文件版本   
-存：file的hash，压缩的内容   
-（但不知项目轮廓）  
-
-### tree 对象：        
-代表： 项目的本地新版本（是项目的轮廓，或快照！）    
-存：tree的hash，存file的index    
-（但不知是谁，种的什么树，时间及原因）  
-
-### commit 对象：   
-代表： 对 tree 进行封装， 加入几条额外描述信息而已  
-存：   谁，什么时候，因为什么，是第几次，种了哪个树...  
+  ```javascript
+  console.log("I'm a code block!");
+  ```
+</details>
 
 
-## 换行格式：  
-LF:  line feed    纯洁的换行机制 （linux）  
-LF样例    \n  
-CRLF: carriage return line feed 包含回车的换行机制 （windows）  
-CRLF样例   \r\n  
+
+## Git的两条学习路线
+
+* **三个对象，三个区域**。
+  * 3 Objects: Blob => Tree => Commit 
+  * 3 Areas: 工作区 => 暂存区 => 版本库
+
+* 额外内容：
+
+  * .git 目录结构
+
+    * hooks: 
+    * info: 
+    * logs: 
+    * **objects**: 
+    * refs: 
+    * COMMIT_EDITMSG: 
+    * config: 
+    * description: 
+    * FETCH_HEAD: 
+    * HEAD: 
+    * **index**: 
+
+    
+
+## Git 三大对象：
+
+* blob 对象 
+
+  * 核心：就是个 **hash-object** 的 **k-v** 键值对数据库（存放在工作区）
+
+  * 代表： **单文件版本**   （通过hash来确定）
+
+  * 存放：file的hash（作为数据库的key），存压缩的内容（作为数据库的value）   
+
+  * 缺陷：只有blob对象的话，仅通过它们无法知道项目总体轮廓  （引出 tree 对象）
+
+  * 指令：
+
+    * **在工作区创建blob对象**： ***(-w)***
+
+      `$ echo "test content v1" > ./file.txt`
+
+      `$ git hash-object -w ./file.txt`
+
+    * 通过linux管道(pipeline)指令，在工作区直接创建blob对象（不常用）：
+
+      `$ echo 'test content' | git hash-object -w --stdin`
+
+      (--stdin = STarDand INput from command)
+
+    * 仅查看对象 hash (SHA1) 值：
+
+      `$ git hash-object ./file.txt`
+
+  * 补充：
+
+    * **(!)** 自己修改完文件，若不输入 `$ git hash-object -w ./file.txt`， Git是不会知道你版本有更新的。当然，这个功能被  `$ git add ./file.txt` 封装了，但它还包含了其他功能，后续说明 [Link]。
+
+    * **(x)** 若想查看hash-object中的value，在linux命令中调用cat指令，如：
+
+      `$ cat ./.git/objects/d6/5490dsn2ud3b2uf87f2b`
+
+      ​      该指令只能看到被压缩后的value (加密文件内容) 
+
+    * **(√)** 所以若想**查看**解压后（解码后）的**object content**，需要使用如下命令：
+
+      `$ git cat-file -p d65490dsn2ud3b2uf87f2b` 
+
+    * **(√)** 若想**查看**一个object的**类型** （是blob，tree，还是commit类），则使用如下命令：
+
+      `$ git cat-file -t d65490dsn2ud3b2uf87f2b` 
+
+      ​    *（其中hash值并不需要写全部，也可以匹配到）*
+
+* tree 对象
+
+  * 代表： 项目的本地新版本，也就是**项目的轮廓，或快照**
+  * 存放：tree的hash，存file的index    
+    （但不知是谁，种的什么树，时间及原因） 
+
+* commit 对象
+
+  * 代表： **对 tree 进行封装， 加入几条额外描述信息而已**  
+  * 存放：谁，什么时候，因为什么，是第几次，种了哪个树
+
+
+
+## Git换行格式  
+
+* LF:  Line Feed Windows换行机制   
+  * LF样例：    **\n**  
+* CRLF: Carriage Return Line Feed 包含回车的换行机制 （linux & git）  
+  * CRLF样例：   **\r\n**  
+
+
 
  ![image1](/assets/img/postimage/1.jpg "image1")  
  ![image2](/assets/img/postimage/2.jpg "image2")  
@@ -40,11 +125,11 @@ CRLF样例   \r\n
  ![image7](/assets/img/postimage/7.jpg "image7")  
  ![image8](/assets/img/postimage/8.jpg "image8")  
  ![image9](/assets/img/postimage/9.jpg "image9")  
- 
- 
+
+
 ### emoji test: 
 
 🎨⚡️🔥🐛🚑✨📝🚀🎉💄✅🔒🔖🔧🚨🚧💚⬇️⬆️📌
 📌👷📈♻️➕➖🔨🌐✏️💩⏪🔀📦👽🚚📄💥
 🍱♿️💡🍻💬🗃🔊🔇👥🚸🏗📱🤡🥚🙈📸⚗🔍🏷️🌱
-🚩🥅💫🗑🛂🩹🧐
+🚩🥅💫🗑🛂🩹🧐 
