spoiler block test

--- a/_posts/2020-12-09-Github入门1.md
+++ b/_posts/2020-12-09-Github入门1.md
@@ -122,10 +122,15 @@ and the name as (depending on your way):
 
 `git config --list ` 
 
+* 关于 --global 参数
+  * `--system` 设置本系统中所有用户的默认git账号
+  * `--global` 设置系统中本用户的默认git账号
+  * ` ` 设置当前文件夹目录应该归属于哪个git账号
+  
 * 关于 config 变量存放的三个位置：
-  * /etc/gitconfig 文件 ：全os系统中所有os用户的默认git用户
-  * ~/.gitconfig 文件 ：os系统中当前os用户中全项目的默认git用户
-  * ./.git/config 文件 ：当前git项目的git用户 （若这里没存，那默认向上找）
+  * `/etc/gitconfig` ‘--system’ 所对应的存储目录
+  * `~/.gitconfig` ’--global‘ 所对应的存储目录
+  * `./.git/config` ‘ ’ 所对应的存储目录
 
 ---
 
