--- a/_posts/2020-12-11-Github入门2.md
+++ b/_posts/2020-12-11-Github入门2.md
@@ -7,24 +7,11 @@ tags: [github]
 pin: false
 ---
 
-## spoiler block test
-<details>
-  <summary>Spoiler warning</summary>
-
-  Spoiler text. 
-
-  ```javascript
-  console.log("I'm a code block!");
-  ```
-</details>
-
-
-
 ## Git的两条学习路线
 
 * **三个对象，三个区域**。
-  * 3 Objects: Blob => Tree => Commit 
-  * 3 Areas: 工作区 => 暂存区 => 版本库
+  * 3 Objects: `Blob` => `Tree` => `Commit`
+  * 3 Areas: `工作区` => `暂存区` => `版本库`
 
 * 额外内容：
 
@@ -59,36 +46,42 @@ pin: false
   * 指令：
 
     * **在工作区创建blob对象**： ***(-w)***
-
-      `$ echo "test content v1" > ./file.txt`
-
+      <details>
+        <summary></summary>  
+        
+        `$ echo "test content v1" > ./file.txt`
+      </details>
+      
       `$ git hash-object -w ./file.txt`
-
-    * 通过linux管道(pipeline)指令，在工作区直接创建blob对象（不常用）：
-
-      `$ echo 'test content' | git hash-object -w --stdin`
-
-      (--stdin = STarDand INput from command)
-
+    <details>
+      <summary></summary>  
+    
+      * 通过linux管道(pipeline)指令，在工作区直接创建blob对象（不常用）：
+     
+           `$ echo 'test content' | git hash-object -w --stdin`
+     
+           (--stdin = STarDand INput from command)
+    </details>
+   
     * 仅查看对象 hash (SHA1) 值：
 
       `$ git hash-object ./file.txt`
 
   * 补充：
 
-    * **(!)** 自己修改完文件，若不输入 `$ git hash-object -w ./file.txt`， Git是不会知道你版本有更新的。当然，这个功能被  `$ git add ./file.txt` 封装了，但它还包含了其他功能，后续说明 [Link]。
+    * **(🚩)** 自己修改完文件，若不输入 `$ git hash-object -w ./file.txt`， Git是不会知道你版本有更新的。当然，这个功能被  `$ git add ./file.txt` 封装了，但它还包含了其他功能，后续说明 [Link]。
 
-    * **(x)** 若想查看hash-object中的value，在linux命令中调用cat指令，如：
+    * **(💩)** 若想查看hash-object中的value，在linux命令中调用cat指令，如：
 
       `$ cat ./.git/objects/d6/5490dsn2ud3b2uf87f2b`
 
       ​      该指令只能看到被压缩后的value (加密文件内容) 
 
-    * **(√)** 所以若想**查看**解压后（解码后）的**object content**，需要使用如下命令：
+    * **(✅)** 所以若想**查看**解压后（解码后）的**object content**，需要使用如下命令：
 
       `$ git cat-file -p d65490dsn2ud3b2uf87f2b` 
 
-    * **(√)** 若想**查看**一个object的**类型** （是blob，tree，还是commit类），则使用如下命令：
+    * **(✅)** 若想**查看**一个object的**类型** （是blob，tree，还是commit类），则使用如下命令：
 
       `$ git cat-file -t d65490dsn2ud3b2uf87f2b` 
 
