feed zhihu csdn leetcode info in contact.yml, share.yml

--- a/_posts/2020-12-11-Github入门2.md
+++ b/_posts/2020-12-11-Github入门2.md
@@ -46,42 +46,36 @@ pin: false
   * 指令：
 
     * **在工作区创建blob对象**： ***(-w)***
-      <details>
-        <summary></summary>  
-        
-        `$ echo "test content v1" > ./file.txt`
-      </details>
-      
+
+      `$ echo "test content v1" > ./file.txt`
+
       `$ git hash-object -w ./file.txt`
-    <details>
-      <summary></summary>  
-    
-      * 通过linux管道(pipeline)指令，在工作区直接创建blob对象（不常用）：
-     
-           `$ echo 'test content' | git hash-object -w --stdin`
-     
-           (--stdin = STarDand INput from command)
-    </details>
-   
+
+    * 通过linux管道(pipeline)指令，在工作区直接创建blob对象（不常用）：
+
+      `$ echo 'test content' | git hash-object -w --stdin`
+
+      (--stdin = STarDand INput from command)
+
     * 仅查看对象 hash (SHA1) 值：
 
       `$ git hash-object ./file.txt`
 
   * 补充：
 
-    * **(🚩)** 自己修改完文件，若不输入 `$ git hash-object -w ./file.txt`， Git是不会知道你版本有更新的。当然，这个功能被  `$ git add ./file.txt` 封装了，但它还包含了其他功能，后续说明 [Link]。
+    * **(!)** 自己修改完文件，若不输入 `$ git hash-object -w ./file.txt`， Git是不会知道你版本有更新的。当然，这个功能被  `$ git add ./file.txt` 封装了，但它还包含了其他功能，后续说明 [Link]。
 
-    * **(💩)** 若想查看hash-object中的value，在linux命令中调用cat指令，如：
+    * **(x)** 若想查看hash-object中的value，在linux命令中调用cat指令，如：
 
       `$ cat ./.git/objects/d6/5490dsn2ud3b2uf87f2b`
 
       ​      该指令只能看到被压缩后的value (加密文件内容) 
 
-    * **(✅)** 所以若想**查看**解压后（解码后）的**object content**，需要使用如下命令：
+    * **(√)** 所以若想**查看**解压后（解码后）的**object content**，需要使用如下命令：
 
       `$ git cat-file -p d65490dsn2ud3b2uf87f2b` 
 
-    * **(✅)** 若想**查看**一个object的**类型** （是blob，tree，还是commit类），则使用如下命令：
+    * **(√)** 若想**查看**一个object的**类型** （是blob，tree，还是commit类），则使用如下命令：
 
       `$ git cat-file -t d65490dsn2ud3b2uf87f2b` 
 
