update github1 notes

--- a/_posts/2020-12-09-Github入门1.md
+++ b/_posts/2020-12-09-Github入门1.md
@@ -17,7 +17,9 @@ pin: false
 
 此外：  
 * Git相关书目作为基础优先推荐： **《Pro Git》**   
-  * 中文电子版：[Link](https://gitee.com/progit/1-%E8%B5%B7%E6%AD%A5.html#1.1-%E5%85%B3%E4%BA%8E%E7%89%88%E6%9C%AC%E6%8E%A7%E5%88%B6)
+  * [Link](https://gitee.com/progit/1-%E8%B5%B7%E6%AD%A5.html#1.1-%E5%85%B3%E4%BA%8E%E7%89%88%E6%9C%AC%E6%8E%A7%E5%88%B6)
+* Git-SCM doc 一手教学
+  * [Link](https://git-scm.com/docs/)
 ---
 
 ## 🔖 学习Git相关内容时需要了解的缩写 Abbr.
